## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = gnu no-dependencies

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libMesaSwrast.la

include libMesaSwrast_la_SOURCES

# libMesaSwrast_la_LDFLAGS = -static


include $(top_srcdir)/common_rules.make
